--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlzjC-3X0ACcC5wclnWugwOkoD9Px9tzTOmg&usqp=CAU">
     <title>s-f-G-t</title>
     <link rel="stylesheet" href="styles.css">
+    <script data-ad-client="ca-pub-9571654785789256" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="blurred-wrapper">
