--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlzjC-3X0ACcC5wclnWugwOkoD9Px9tzTOmg&usqp=CAU">
-    <title>s-f-G-t</title>
+    <title>christain-web</title>
     <link rel="stylesheet" href="styles.css">
     <script data-ad-client="ca-pub-9571654785789256" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
