--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="blurred-wrapper">
     <header class="main-header container">
-        <a href="index.html" class="logo">Serving For God Today.<span>.</span></a>
+        <a href="index.html" class="logo">christain-web.<span>.</span></a>
         <a href="daily.html" class="btn sign-up">Thought For You</a>
     </header>
     <section class="hero container">
@@ -21,7 +21,7 @@
             <h5 class="tagline"></h5>
             <h1 class="title">“ദൈവം നമ്മുടെ സങ്കേതവും ബലവും ആകുന്നു; കഷ്ടങ്ങളില്‍ അവന്‍ ഏറ്റവും അടുത്ത തുണയായിരിക്കുന്നു.” <span><br> <color=green>[Psalms 46:1]</color></br></span></h1>
             <p class="message">Start Your Day With The Word OF God.</p>
-            <a href="https://aibaljose.github.io" class="btn cta">Contact</a>
+            <a href="https://aibaljose.github.io" class="btn cta">@christain-web</a>
         </div>
     </section>
    
