--- a/daily.html
+++ b/daily.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/x-icon" href="https://yt3.ggpht.com/ytc/AAUvwngAo3Pj2mFTg5bgfb3B4Wt6NMZPe7PiG9hxHeJ5TA=s900-c-k-c0x00ffffff-no-rj">
 <style>
+ <script data-ad-client="ca-pub-8888622061085568" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 body {
   font-family: Arial;
