--- a/daily.html
+++ b/daily.html
@@ -118,6 +118,7 @@ img {
 }
 </style>
 <body>
+ 
 
 <h2 style="text-align:center">Daily Malayalam Bible Quotes</h2> <a href="index.html"button class="btn">GO BACK</button> </a>
 
@@ -135,6 +136,17 @@ img {
       
   </div>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Ads1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8888622061085568"
+     data-ad-slot="4951916883"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
     
