--- a/index.html
+++ b/index.html
@@ -287,6 +287,16 @@ body
 
 </head>
 <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8888622061085568"
+     data-ad-slot="9821100187"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
    
 <section class="services">
 
